<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_24sdp"
    app:cardCornerRadius="@dimen/_20sdp"
    app:cardElevation="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_target"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/enter_water"
            android:inputType="number"
            android:maxLines="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/confirm"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
