<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardCycleDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_24sdp"
    app:cardCornerRadius="@dimen/_28sdp"
    app:cardElevation="@dimen/_12sdp">

    <LinearLayout
        android:id="@+id/llCycleDialogRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycle_length_title"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/lavender_light"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCycleFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="28"
                android:textSize="@dimen/_39ssp"
                android:textStyle="bold"
                android:textColor="@color/lavender_dark" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cycle_days"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/lavender_light"
                android:layout_marginTop="@dimen/_12sdp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycle_length_Hint"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/lavender_light"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp" />

        <NumberPicker
            android:id="@+id/npCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:descendantFocusability="blocksDescendants" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_24sdp"
            android:paddingVertical="@dimen/_14sdp"
            android:background="@drawable/button"
            android:minWidth="0dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>