<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardWorkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWorkoutTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_workout_type"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/workoutTypeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/_8sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintTop_toBottomOf="@id/tvWorkoutTypeLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/actWorkoutType"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:hint="@string/select_workout"
                    android:background="@drawable/bg_input_rounded"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_minutes"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/workoutTypeLayout"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDuration"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:hint="@string/duration_example"
                android:inputType="number"
                android:padding="@dimen/_12sdp"
                android:background="@drawable/bg_input_rounded"
                app:layout_constraintTop_toBottomOf="@id/tvDurationLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIntensityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_intensity"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/edtDuration"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/intensityLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintTop_toBottomOf="@id/tvIntensityLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/actIntensity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:hint="@string/select_intensity"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:background="@drawable/bg_input_rounded"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/save_workout"
                app:layout_constraintTop_toBottomOf="@id/intensityLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>