<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginIllustration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/_24sdp"
            android:src="@drawable/login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="@dimen/_24ssp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_gravity="start"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_gravity="start"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_17sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/lavender_primary"
            android:textColorHint="@color/lavender_primary"
            android:drawableStart="@drawable/person_24px"
            android:drawablePadding="@dimen/_7sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nameErrorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_8ssp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/_10sdp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_17sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/lavender_primary"
            android:textColorHint="@color/lavender_primary"
            android:drawableStart="@drawable/mail_24px"
            android:drawablePadding="@dimen/_7sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailErrorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_8ssp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/_10sdp"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lavender_primary"
            app:hintEnabled="false"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_17sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/lavender_primary"
                android:textColorHint="@color/lavender_primary"
                android:drawableStart="@drawable/key_vertical_24px"
                android:drawablePadding="@dimen/_7sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordErrorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_8ssp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="start"
            android:paddingLeft="@dimen/_10sdp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_18sdp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginRedirectTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_12sdp"
            android:clickable="true"
            android:focusable="true"/>


    </LinearLayout>

</ScrollView>
